<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index_background"
    tools:context=".fragments.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_recomd"
            android:layout_marginStart="@dimen/widgets_margin_start"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:layout_marginEnd="@dimen/widgets_margin_end"
            android:background="@drawable/widgets_design"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="@dimen/notes_text_size"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_recomd"
            android:layout_marginStart="@dimen/widgets_margin_start"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:layout_marginEnd="@dimen/widgets_margin_end"
            android:background="@drawable/widgets_design"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="@dimen/notes_text_size"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:text="@string/login"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/dhasu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/layout_height_recomd"
            android:text="@string/dont_have_acnt_msg"
            android:textSize="@dimen/notes_text_size"
            android:textStyle="bold"
            android:textColor="#FFC0CB"/>
    </LinearLayout>

</FrameLayout>